--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "@types/spotify-api": "^0.0.25",
     "fetch-retry": "^6.0.0",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -21,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
